Fix: Adjust alignment and background color in ContactProfile styles

--- a/src/containers/Profile/Contact/ContactProfile.module.css
+++ b/src/containers/Profile/Contact/ContactProfile.module.css
@@ -76,7 +76,7 @@
   font-weight: 500;
   color: #717971;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   gap: 10px;
 }
 
@@ -102,7 +102,7 @@
 }
 
 .Default {
-  background-color: #e0e0e0;
+  background-color: #eaeaea;
   color: #4b4b4b;
 }
 
@@ -114,5 +114,5 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 1px;
+  gap: 0.2rem;
 }
